--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         <section class="text">
           <div class="service-container">
             <div class="welcome">
-              <img src="./images/001.jpg" class="image" alt="photo" />
             </div>
-            <div class="welcome">
+            <div class="welcome-overlay">
+            </div>
+            <div class="welcome2">
               <div class="para">
                 Welcome to Futuristic Marketing Agency, your one-stop
                 destination for cutting-edge digital marketing solutions.
