updated html and css

--- a/index.html
+++ b/index.html
@@ -7,24 +7,30 @@
   </head>
   <body>
     <header id="header">
-      <nav id="navbar">
-        <div class="nav-container">
-          <div class="items"><a href="#services">Services</a></div>
-          <div class="items"><a href="#portfolio">Portfolio</a></div>
-          <div class="items"><a href="#about-us">About us</a></div>
-          <div class="items"><a href="#contact-us">Contact us</a></div>
-        </div>
-        <br />
-      </nav>
+      <div class="image-header">
+        <img src="./images/logo-img.png" alt="logo" class="image-logo" />
+      </div>
+      <div class="logos">
+        <nav id="navbar">
+          <div class="nav-container">
+            <div class="items"><a href="#services">Services</a></div>
+            <div class="items"><a href="#portfolio">Portfolio</a></div>
+            <div class="items"><a href="#about-us">About us</a></div>
+            <div class="items"><a href="#contact-us">Contact us</a></div>
+            <div class="items"><a href="#blog">Blog</a></div>
+            <div class="items"><a href="#pages">Pages</a></div>
+            <div class="items"><a href="#shop">Shop</a></div>
+          </div>
+        </nav>
+      </div>
+      <br />
     </header>
     <div id="main">
       <section id="services">
         <section class="text">
           <div class="service-container">
-            <div class="welcome">
-            </div>
-            <div class="welcome-overlay">
-            </div>
+            <div class="welcome"></div>
+            <div class="welcome-overlay"></div>
             <div class="welcome2">
               <div class="para">
                 Welcome to Futuristic Marketing Agency, your one-stop
@@ -36,41 +42,56 @@
                 landscape.Our individual services are designed to drive tangible
                 results and elevate your brand to new heights.
               </div>
+              <div class="button">
+                <button class="Btn"></button>
+              </div>
             </div>
           </div>
         </section>
         <section class="digital">
+          <div class="digi-section">
+            <h1 class="digital-head">Digital Marketing</h1>
+          </div>
           <div class="marketing">
-            <div class="digi-section">
-              <h1 class="head">Digital Marketing</h1>
-            </div>
-            <div class="para">
+            <div class="digital-text">
               Discover the power of innovative digital marketing with Futuristic
               Marketing Agency. Let us be your partner in success, providing you
               with the tools and strategies to navigate the digital landscape
-              with confidence and achieve remarkable growth.
+              with confidence and achieve remarkable growth.As a leading digital
+              marketing agency, we are dedicated to continuous learning and
+              adapting to the dynamic digital landscape. Let us propel your
+              business into the future with innovation, expertise, and a passion
+              for delivering exceptional results.
             </div>
             <div class="img-div">
-              <img src="./images/002.jpg" class="image" alt="photo" />
+              <img src="./images/002.jpg" class="digital-image" alt="photo" />
             </div>
           </div>
         </section>
         <section class="social">
+          <div class="social-heading">
+            <h2 class="head">Social Marketing</h2>
+          </div>
           <div class="social-div">
-            <div class="social-heading">
-              <h2 class="head">Social Marketing</h2>
+            <div class="social-text">
+              Social media marketing is a dynamic and essential component of
+              digital marketing that enables businesses to connect with their
+              target audience on a personal level. Through engaging content,
+              sophisticated audience targeting, and social advertising, brands
+              can build a strong online presence, enhance brand visibility, and
+              drive conversions. Social media platforms also foster community
+              building, allowing businesses to interact directly with their
+              followers, respond to inquiries, and create brand
+              advocates.Leveraging social media effectively can unlock
+              tremendous opportunities for businesses to reach and connect with
+              their target audience in meaningful ways. Embracing social media
+              as a valuable marketing tool allows businesses to build authentic
+              relationships with their audience, leverage influencer marketing,
+              and provide top-notch customer support, ultimately contributing to
+              their overall success in the competitive digital landscape.
             </div>
-            <div class="para">
-              We understand the importance of seamless communication, which is
-              why our "Contact Us" section provides multiple ways to get in
-              touch with our team. Whether you prefer to fill out our
-              user-friendly contact form or directly reach out via email or
-              phone, we are ready to discuss your project and collaborate on a
-              personalized marketing strategy that propels your business
-              forward.
-            </div>
-            <div class="div">
-              <img src="./images/003.jpg" alt="photo" class="image" />
+            <div class="social-image-div">
+              <img src="./images/003.jpg" alt="photo" class="social-image" />
             </div>
           </div>
         </section>
