updated html and css

--- a/index.html
+++ b/index.html
@@ -96,19 +96,26 @@
           </div>
         </section>
         <section class="content">
+          <div class="content-head">
+            <h3 class="head">Content Creation</h3>
+          </div>
           <div class="content-div">
-            <div class="content-head">
-              <h3 class="head">Content Creation</h3>
-            </div>
-            <div class="para">
+            <div class="content-heading">
               At Futuristic Marketing Agency, our team of dedicated
               professionals brings a wealth of experience and a passion for
               excellence. Our client-centric approach ensures that we tailor our
               marketing solutions to meet your unique business objectives,
-              helping you stand out in the competitive digital landscape.
+              helping you stand out in the competitive digital landscape. To
+              ensure our content remains relevant and timely, we continuously
+              monitor industry trends and adapt our strategies accordingly. Our
+              commitment to quality and consistency ensures that every piece of
+              content we produce reflects the unique voice and values of our
+              clients' brands. By promoting content through various channels and
+              measuring its performance, we refine our approaches, optimizing
+              engagement and driving tangible results for our clients. 
             </div>
             <div class="content-img">
-              <img src="./images/004.jpg" alt="photo" class="image" />
+              <img src="./images/004.jpg" alt="photo" class="content-image" />
             </div>
           </div>
         </section>
