updated hmtl and css

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               content we produce reflects the unique voice and values of our
               clients' brands. By promoting content through various channels and
               measuring its performance, we refine our approaches, optimizing
-              engagement and driving tangible results for our clients. 
+              engagement and driving tangible results for our clients.
             </div>
             <div class="content-img">
               <img src="./images/004.jpg" alt="photo" class="content-image" />
@@ -120,19 +120,32 @@
           </div>
         </section>
         <section class="branding">
+          <div class="brand-div">
+            <h3 class="brand-head">Branding</h3>
+          </div>
           <div class="brand-container">
-            <div>
-              <h4 class="head">Branding</h4>
-            </div>
-            <div class="para">
+            <div class="branding-text">
               Branding is at the heart of what we do – we strive to craft unique
               and compelling brand identities that resonate with your target
               audience. Our services go beyond just visuals; we believe in
               creating a brand story that leaves a lasting impact on your
-              customers, helping you stand out in today's competitive landscape
+              customers, helping you stand out in today's competitive
+              landscape.Moreover, our branding services encompass brand
+              positioning, helping our clients identify their unique place in
+              the market and capitalize on their strengths. We create brand
+              stories that speak to the hearts of customers, allowing them to
+              form emotional connections and loyalty to the brand. Whether it's
+              a rebranding initiative or a new market entry, our team is
+              dedicated to crafting impactful branding strategies that elevate
+              our clients' brand perception and drive recognition and trust
+              within their industry.We monitor market shifts and customer
+              feedback to adapt and evolve our clients' brand strategies as
+              needed. By fostering a strong and memorable brand presence, we
+              empower our clients to thrive in the digital world and set a
+              course for future success.
             </div>
-            <div>
-              <img src="./images/005.jpg" alt="photo" class="image" />
+            <div class="brand-img-div">
+              <img src="./images/005.jpg" alt="photo" class="brand-image" />
             </div>
           </div>
         </section>
@@ -140,11 +153,11 @@
 
       <section id="portfolio">
         <section class="portfolio-section">
+          <div>
+            <h5 class="portfolio-head">Portfolio</h5>
+          </div>
           <div class="portfolio-div">
-            <div>
-              <h5 class="head">Portfolio</h5>
-            </div>
-            <div class="para">
+            <div class="portfolio-text">
               In our portfolio section, we take immense pride in showcasing a
               diverse array of projects that highlight the scope and excellence
               of our work. Each project represents a unique challenge and an
@@ -152,7 +165,7 @@
               tailored to our clients' specific objectives.
             </div>
             <div class="portfolio-img">
-              <img src="./images/006.jpg" alt="photo" class="image" />
+              <img src="./images/006.jpg" alt="photo" class="portfolio-image" />
             </div>
           </div>
         </section>
