updated html and css

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               of our clients.
             </div>
             <div class="our-img">
-              <img src="./images/008.jpg" alt="photo" class="case-image" />
+              <img src="./images/008.jpg" alt="case-photo" class="case-image" />
             </div>
           </div>
         </section>
