updated the form section with css styling

--- a/index.html
+++ b/index.html
@@ -410,7 +410,6 @@
             </div>
             <br />
             <div class="message-flex">
-           
               <div>
                 <label class="message">Message</label>
                 <input
@@ -420,8 +419,8 @@
                 />
               </div>
             </div>
-            <div>
-              <button type="submit">Submit</button>
+            <div class="div-button">
+              <button type="submit" class="submit-button">Submit</button>
             </div>
           </form>
         </section>
