added styling to the icons and the footer

--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
             <div class="items"><a href="#portfolio">Portfolio</a></div>
             <div class="items"><a href="#about-us">About us</a></div>
             <div class="items"><a href="#contact-us">Contact us</a></div>
-            <div class="items"><a href="#blog">Blog</a></div>
-            <div class="items"><a href="#pages">Pages</a></div>
-            <div class="items"><a href="#shop">Shop</a></div>
           </div>
         </nav>
       </div>
@@ -434,19 +431,17 @@
             >
           </div>
           <div class="icon-list">
-            <i class="fa-solid fa-mobile-screen" class="mobile-icon"
+            <i class="fa-solid fa-mobile-screen"
               ><span class="texts">Call us</span></i
             >
           </div>
           <div class="icon-list">
-            <i class="fa-brands fa-twitter" class="twitter-icon"
+            <i class="fa-brands fa-twitter"
               ><span class="texts">Twitter</span></i
             >
           </div>
           <div class="icon-list">
-            <i class="fa-solid fa-at" class="email-icon"
-              ><span class="texts">Send a mail</span></i
-            >
+            <i class="fa-solid fa-at"><span class="texts">Send a mail</span></i>
           </div>
         </div>
       </section>
@@ -456,25 +451,9 @@
       ></script>
       <footer>
         <div class="copyrights">
-          <div class="terms">
-            <div class="copy">&#169;Futuristic Marketing Agency</div>
-            <div class="terms">
-              <ul class="list">
-                <li class="term-item">
-                  <a href="#terms" class="term">Terms</a>
-                </li>
-                <li class="term-item">
-                  <a href="#privacy" class="term">Privacy</a>
-                </li>
-              </ul>
-            </div>
-            <div class="location">Futurist Street,CityVille,Pan-nyok</div>
-            <div class="link">
-              <a href="info" class="info-link"
-                >info@futuristicmarketingagency.com</a
-              >
-            </div>
-          </div>
+          <div class="copy">Futurist Street,CityVille,Pan-nyok</div>
+          <div class="copy">&#169;Futuristic Marketing Agency 2023</div>
+         
         </div>
       </footer>
     </div>
