added media querries to xlarge.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <title>Futuristic Marketing Agency</title>
     <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./Stylesheets/small.css" />
+    <link rel="stylesheet" href="./Stylesheets/smaller.css" />
+    <link rel="stylesheet" href="./Stylesheets/smallest.css" />
+    <link rel="stylesheet" href="./Stylesheets/medium.css" />
+    <link rel="stylesheet" href="./Stylesheets/large.css" />
+    <link rel="stylesheet" href="./Stylesheets/xlarge.css" />
+    <link rel="stylesheet" href="./Stylesheets/xxlarge.css" />
   </head>
   <body>
     <header id="header">
@@ -294,7 +301,6 @@
           </div>
         </div>
       </section>
-      <br />
       <section class="great">
         <div class="great-div">
           <div class="great-text">
@@ -316,7 +322,6 @@
           </div>
         </div>
       </section>
-      <br />
       <section class="future">
         <div class="future-div">
           <div class="future-text">
@@ -332,11 +337,11 @@
           </div>
         </div>
       </section>
-      <br />
+
       <section id="contact-us">
         <section class="contacts">
-          <div>
-            <h2 class="contact-heading">Contact us</h2>
+          <div class="contact-heading">
+            <h2 class="heading1">Contact us</h2>
           </div>
           <div class="contact-div">
             <div class="contact-text">
@@ -353,7 +358,7 @@
               to address any inquiries, provide updates on your projects, or
               simply have a friendly conversation.
             </div>
-            <br />
+
             <div class="contact-img">
               <img src="./images/14.jpg" alt="photo" class="contact-image" />
             </div>
@@ -368,7 +373,6 @@
             have any other questions, we're here to assist you.
           </div>
         </section>
-        <br />
         <section class="form-section">
           <form id="form">
             <div>
@@ -453,7 +457,6 @@
         <div class="copyrights">
           <div class="copy">Futurist Street,CityVille,Pan-nyok</div>
           <div class="copy">&#169;Futuristic Marketing Agency 2023</div>
-         
         </div>
       </footer>
     </div>
