added media querry to large.css

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
         </section>
       </section>
       <br />
-      <section id="contact-us">
+      <section id="contacts-info">
         <div id="icons">
           <div class="icon-list">
             <i class="fa-brands fa-facebook"
