updated medium.css with media querries

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <title>Futuristic Marketing Agency</title>
     <link rel="stylesheet" href="./index.css" />
-    <link rel="stylesheet" href="./Stylesheets/small.css" />
+    <!-- <link rel="stylesheet" href="./Stylesheets/small.css" />
     <link rel="stylesheet" href="./Stylesheets/smaller.css" />
-    <link rel="stylesheet" href="./Stylesheets/smallest.css" />
+    <link rel="stylesheet" href="./Stylesheets/smallest.css" /> -->
     <link rel="stylesheet" href="./Stylesheets/medium.css" />
     <link rel="stylesheet" href="./Stylesheets/large.css" />
     <link rel="stylesheet" href="./Stylesheets/xlarge.css" />
