updated large,xlarge,medium and index.css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <title>Futuristic Marketing Agency</title>
     <link rel="stylesheet" href="./index.css" />
-    <!-- <link rel="stylesheet" href="./Stylesheets/medium.css" />
+    <link rel="stylesheet" href="./Stylesheets/medium.css" />
     <link rel="stylesheet" href="./Stylesheets/large.css" />
-    <link rel="stylesheet" href="./Stylesheets/xlarge.css" /> -->
+    <link rel="stylesheet" href="./Stylesheets/xlarge.css" />
   </head>
   <body>
     <header id="header">
