added media querry breakpoint for smallest device

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Futuristic Marketing Agency</title>
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="./Stylesheets/medium.css" />
@@ -52,7 +53,7 @@
           <div class="digi-section">
             <h1 class="digital-head">Digital Marketing</h1>
           </div>
-          <div class="marketing">
+          <div class="digital-div">
             <div class="digital-text">
               Discover the power of innovative digital marketing with Futuristic
               Marketing Agency. Let us be your partner in success, providing you
@@ -68,7 +69,7 @@
         </section>
         <section class="social">
           <div class="social-heading">
-            <h2 class="social-head">Social Marketing</h2>
+            <h2 class="social-media">Social Media Marketing</h2>
           </div>
           <div class="social-div">
             <div class="social-text">
@@ -80,11 +81,6 @@
               drive conversions. Social media platforms also foster community
               building, allowing businesses to interact directly with their
               followers, respond to inquiries, and create brand advocates.
-              Embracing social media as a valuable marketing tool allows
-              businesses to build authentic relationships with their audience,
-              leverage influencer marketing, and provide top-notch customer
-              support, ultimately contributing to their overall success in the
-              competitive digital landscape.
             </div>
             <div class="social-image-div">
               <img src="./images/003.jpg" alt="photo" class="social-image" />
@@ -93,7 +89,7 @@
         </section>
         <section class="content">
           <div class="content-head">
-            <h3 class="head">Content Creation</h3>
+            <h2 class="content-heading">Content Creation</h2>
           </div>
           <div class="content-div">
             <div class="content-text">
@@ -115,7 +111,7 @@
         </section>
         <section class="branding">
           <div class="brand-div">
-            <h3 class="brand-head">Branding</h3>
+            <h2 class="brand-head">Branding</h2>
           </div>
           <div class="brand-container">
             <div class="branding-text">
@@ -126,10 +122,7 @@
               customers, helping you stand out in today's competitive landscape.
               We create brand stories that speak to the hearts of customers,
               allowing them to form emotional connections and loyalty to the
-              brand. Whether it's a rebranding initiative or a new market entry,
-              our team is dedicated to crafting impactful branding strategies
-              that elevate our clients' brand perception and drive recognition
-              and trust within their industry.
+              brand.
             </div>
             <div class="brand-img-div">
               <img src="./images/005.jpg" alt="photo" class="brand-image" />
@@ -141,7 +134,7 @@
       <section id="portfolio">
         <section class="portfolio-section">
           <div class="portfolio-div">
-            <h5 class="portfolio-head">Portfolio</h5>
+            <h2 class="portfolio-head">Portfolio</h2>
           </div>
           <div class="portfolio-div">
             <div class="portfolio-text">
@@ -173,8 +166,6 @@
               modernized the look and feel to cohesive visual branding that
               conveyed a compelling brand story, we demonstrate our ability to
               create brands that resonate with their target audiences.
-              Additionally, our digital marketing strategies have yielded
-              remarkable returns on investment for our clients.
             </div>
             <div class="success-img">
               <img src="./images/007.jpg" alt="photo" class="success-image" />
@@ -195,11 +186,7 @@
               identifying target audiences and analyzing market trends to
               crafting compelling messaging and selecting the most effective
               marketing channels, our case studies provide a behind-the-scenes
-              view of our decision-making process.Moreover, transparency is of
-              utmost importance to us. That's why we back our claims with real
-              data, metrics, and analytics. Our case studies present tangible
-              results, illustrating how our marketing efforts translated into
-              tangible growth and success for our clients.
+              view of our decision-making process.
             </div>
             <div class="case-img">
               <img src="./images/008.jpg" alt="case-photo" class="case-image" />
@@ -218,10 +205,7 @@
               Beyond the metrics and analytics, our portfolio showcases the
               powerful narratives behind each success story. We take pride in
               the partnerships we form with our clients, working closely with
-              them to understand their vision and goals. Our dedication to open
-              communication and collaborative teamwork enables us to craft
-              personalized marketing solutions that align seamlessly with their
-              brand identities and resonate deeply with their target audiences.
+              them to understand their vision and goals.
             </div>
             <div class="more-img">
               <img src="./images/009.jpg" alt="photo" class="more-image" />
@@ -265,12 +249,7 @@
             storytellers, and visionaries who are always on the lookout for
             groundbreaking solutions that will propel your brand to new heights.
             Staying ahead of industry trends is not just a choice; it's embedded
-            in our DNA. We immerse ourselves in the dynamic world of digital
-            marketing, exploring the latest tools, platforms, and techniques to
-            remain at the forefront of innovation. By anticipating the next big
-            breakthroughs, we are poised to deliver visionary strategies that
-            are not only effective today but also future-proof your brand for
-            tomorrow's challenges.
+            in our DNA.
           </div>
           <div class="at-img">
             <img src="./images/11.jpg" alt="photo" class="at-image" />
@@ -308,10 +287,7 @@
             excellence and an unwavering commitment to your brand's success.
             When you partner with us, you gain access to a powerhouse of
             creative minds who are not afraid to think outside the box and
-            challenge the status quo. We approach every project with a fresh
-            perspective, weaving together creativity, data-driven insights, and
-            industry best practices to develop innovative marketing solutions
-            that make an impact.
+            challenge the status quo.
           </div>
           <div class="great-img">
             <img src="./images/13.jpg" alt="photo" class="great-image" />
@@ -337,7 +313,7 @@
       <section id="contact-us">
         <section class="contacts">
           <div class="contact-heading">
-            <h2 class="heading1">Contact us</h2>
+            <h2 class="contact-heading1">Contact us</h2>
           </div>
           <div class="contact-div">
             <div class="contact-text">
@@ -350,9 +326,7 @@
               tailored to your preferences. Whether you prefer traditional
               communication methods such as email or phone calls, or you're more
               comfortable with modern channels like live chat or social media,
-              we have you covered. Our team is responsive and readily available
-              to address any inquiries, provide updates on your projects, or
-              simply have a friendly conversation.
+              we have you covered.
             </div>
             <div class="contact-img">
               <img src="./images/14.jpg" alt="photo" class="contact-image" />
@@ -371,7 +345,7 @@
         <section class="form-section">
           <form id="form">
             <div>
-              <label class="label"> Name </label>
+              <label class="name"> Name </label>
               <input
                 type="text"
                 id="name"
