completed the smallest media querry for mini-width 194px and max-width 494px

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         </section>
         <section class="form-section">
           <form id="form">
-            <div>
+            <div class="form-name">
               <label class="name"> Name </label>
               <input
                 type="text"
@@ -355,7 +355,7 @@
               />
             </div>
             <br />
-            <div>
+            <div class="form-email">
               <label class="email">Email address</label>
               <input
                 type="email"
